...
        modifier = Modifier
            .fillMaxWidth(),
        horizontalArrangement = Arrangement.Center
    ) {
        TriggerButton(
            onClick = { viewModel.decrease() },
            text = "-1"
        )
        TriggerButton(
            onClick = { viewModel.increase() },
            text = "+1"
        )
    }
}

@Composable
private fun TriggerButton(
...
